...
        cell.textLabel?.text = cats[indexPath.row].name
    }
    
    /// Return string appropriate for section header of a table.
    /// In this case, the first letter is capitalised.
    private func formatSectionName(_ name: String) -> String {
        return "Cats owned by: \(name.firstCap)"
    }
}

// MARK: - Table View DataSource -

extension CatsByOwnerGendersViewController: UITableViewDataSource {
...
